<resources>
    <string name="app_name">TaskMgt</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_subject">Shinetech Software</string>
    <string name="login_label_user">Username</string>
    <string name="login_label_password">Password</string>
    <string name="login_btnLogin">登录</string>
    <string name="title_activity_employee">EmployeeActivity</string>
    <string name="title_activity_task">TaskActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="taskitem_requesttime">请求时间:</string>
    <string name="taskitem_assignto">负责人:</string>
    <string name="taskitem_content">任务内容:</string>
    <string name="taskitem_clientname">客户姓名:</string>
    <string name="taskitem_clientcontact">联系人:</string>
    <string name="taskitem_clientaddress">客户地址:</string>
    <string name="taskitem_contactphone">联系电话:</string>
    <string name="taskitem_tax">是否含税:</string>
    <string name="taskitem_fee">费用:</string>

    <string name="leftmenu_open">打开</string>
    <string name="leftmenu_close">关闭</string>
    <string name="visit_dialog_time">回访时间</string>
    <string name="visit_dialog_person">回访人</string>
    <string name="visit_dialog_result">回访结果</string>
    <string name="visit_dialog_remark">回访备注</string>
    <string name="clientname">客户名称</string>
    <string name="clientcontact">联系人</string>
    <string name="clientphone">联系电话</string>
    <string name="clientaddress">地址</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="client_add_name">客户名称</string>
    <string name="client_add_address">地址:</string>
    <string name="client_add_contact">联系人:</string>
    <string name="client_add_landphone">坐机:</string>
    <string name="client_add_mobile">移动电话:</string>
    <string name="client_add_fax">传真:</string>
    <string name="client_add_submit">添加客户</string>
    <string name="add_task_request_date">请求日期</string>
    <string name="add_task_btn_requestdate">设置日期</string>
    <string name="task_add_requesttime">设置时间</string>
    <string name="task_add_requesttime_btn">设置时间</string>
    <string name="task_add_client">选择客户</string>
    <string name="task_add_content">工作内容</string>
    <string name="task_add_selectclient_btn">选择客户</string>
    <string name="upload_btn_camera">拍照</string>
    <string name="upload_btn_album">相册</string>
</resources>
