<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="0"
    android:stretchColumns="1">
    <TableRow>
        <TextView android:text="@string/taskitem_requesttime"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <TextView android:id="@+id/TxtTaskItemRequestTime"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="2015-09-13"/>

        <TextView android:text="@string/taskitem_assignto"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <TextView android:id="@+id/TxtTaskItemAssignTo"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="负责人"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/taskitem_clientname"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView android:id="@+id/TxtTaskItemClientName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="2015-09-13"/>

        <TextView android:text="@string/taskitem_clientcontact"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView android:id="@+id/TxtTaskItemContact"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="联系人"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/taskitem_contactphone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <TextView android:id="@+id/TxtTaskItemClientPhone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="18888888888"/>

        <TextView android:text="任务状态:"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <TextView android:id="@+id/TxtTaskItemTaskStatus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="任务状态"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/taskitem_clientaddress"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView android:id="@+id/TxtTaskItemAddress"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="客户地址" android:layout_span="3"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/taskitem_tax"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <TextView android:id="@+id/TxtTaskItemTax"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="1"/>

        <TextView android:text="@string/taskitem_fee"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <TextView android:id="@+id/TxtTaskItemFee"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="99.00"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/taskitem_content"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView android:id="@+id/TxtTaskItemContent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="这是任务的内容" android:layout_span="3"/>
    </TableRow>
    <TableRow>
        <LinearLayout
            android:layout_column="3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/assignto"
                android:id="@+id/BtnTaskItemAssignTo"/>
            <ImageButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/visit"
                android:id="@+id/BtnTaskItemVisit" />
        </LinearLayout>

    </TableRow>
</TableLayout>