<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/visit_dialog">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:stretchColumns="1,3" android:shrinkColumns="0,2">
        <TableRow android:gravity="center" android:minHeight="60px">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_dialog_time"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TxtVisitTime"/>

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_dialog_person"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TxtVisitUser"/>
         </TableRow>
        <TableRow  android:gravity="center" android:minHeight="60px">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_dialog_result" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TxtVisitResult" android:layout_span="3"/>
        </TableRow>
        <TableRow  android:gravity="center" android:minHeight="60px">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_dialog_remark"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TxtVisitRemark" android:layout_span="3"/>
        </TableRow>
    </TableLayout>

</LinearLayout>